# HA-kaleidescape-strato

./: .gitignore  README.md  RELEASING.md  hacs.json  pyproject.toml
.github/: copilot-instructions.md
.github/workflows/: ci.yml  release.yml
custom_components/kaleidescape_strato/: __init__.py  api.py  config_flow.py  const.py  coordinator.py  manifest.json  media_player.py  remote.py  sensor.py  strings.json
custom_components/kaleidescape_strato/translations/: en.json
tests/: test_project_layout.py
