[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kaleidescape-strato-ha"
version = "0.1.22"
description = "Home Assistant custom integration for Kaleidescape Strato players"
readme = "README.md"
requires-python = ">=3.12"
authors = [{ name = "Ted" }]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
